#12 Fixed mobile view completely and fixed some alignments

--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -16,3 +16,9 @@
     height: 200px;
     object-fit: contain;
 }
+
+@media (max-width: 40rem) {
+    .checkout{
+        flex-direction: column;
+    }
+}
