--- a/src/components/Checkout/Subtotal/Subtotal.css
+++ b/src/components/Checkout/Subtotal/Subtotal.css
@@ -30,3 +30,9 @@
     height: 30px;
     width: 100%;
 }
+
+@media (max-width: 40rem) {
+    .subtotal{
+        margin: 0;
+    }
+}
