--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,12 +1,14 @@
-.home{max-width: 1500px;
+.home {
+    max-width: 1500px;
     margin-left:auto ;
-    margin-right:auto ;}
+    margin-right:auto ;
+}
 
 .home__banner{
     width: 100%;
     mask-image: linear-gradient(to bottom,rgba(0,0,0,1),rgba(0,0,0,0));
     z-index: -1;
-    margin-bottom: -150px;
+    margin-bottom: -250px;
 }
 
 .home__row{
@@ -15,4 +17,16 @@
     margin-left: 5px;
     margin-right: 5px;
     flex-flow: row wrap;
+}
+
+@media (max-width: 40rem) {
+    .home{
+        max-width: 100vw;
+    }
+
+    .home__banner{
+        overflow: hidden;
+        height: 30vh;
+        object-fit: cover;
+    }
 }
